Refactored to add roles and various other fixes

--- a/API/IdentityJwtAPI/appsettings.json
+++ b/API/IdentityJwtAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=IdentityJwtDatabase.db"
+    "DefaultConnection": "Server=tcp:(localDb.database.windows.net,1433;Initial Catalog=HomePortalDbDev;Persist Security Info=False;User ID=carlsonaaron78;Password=nXrtdWXYdBJ6Mr37Ywp8;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -14,6 +14,6 @@
     "Issuer": "IdentityJWT",
     "Audience": "ApiUser",
     "SecretKey": "<complex hard-to-guess string (I used a very long password generated in LastPass)>",
-    "TokenExpireSeconds":  "300"
+    "TokenExpireSeconds": "300"
   }
 }
