fix namespaces, use LocalDb SQL Server, add refresh token to migrations

--- a/API/IdentityJwtAPI/appsettings.json
+++ b/API/IdentityJwtAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:(localDb.database.windows.net,1433;Initial Catalog=HomePortalDbDev;Persist Security Info=False;User ID=carlsonaaron78;Password=nXrtdWXYdBJ6Mr37Ywp8;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityJwtDemo;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
